[project]
name = "hexlet-code"
version = "0.1.0"
description = "Brain Games: five console math games"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
